# jsonata-rust

./: .gitignore  .nvimrc  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs  expr.jsonata  renovate.json
.github/workflows/: rust.yaml
docs/: function-signatures.md  status.md
jsonata/: Cargo.toml
jsonata-errors/: Cargo.toml
jsonata-errors/src/: lib.rs
jsonata-native-fn/: Cargo.toml
jsonata-native-fn/src/: lib.rs
jsonata-native-fn/tests/ui/: first-arg-is-not-string-literal.rs  first-arg-is-not-string-literal.stderr  invalid-signature.rs  invalid-signature.stderr  item-is-not-a-function.rs  item-is-not-a-function.stderr
jsonata-shared/: Cargo.toml
jsonata-signature-macro/: Cargo.toml
jsonata-signature-macro/src/: lib.rs
jsonata-signatures/: Cargo.toml
jsonata-signatures/src/: lib.rs
jsonata-wasm/: Cargo.toml
jsonata-wasm/src/: lib.rs
jsonata-wasm/www/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
jsonata-wasm/www/src/: defaultLayout.ts  jsWorker.ts  jsonataMonaco.ts  main.tsx  rustWorker.ts  style.css
jsonata/src/: error.rs  evaluator.rs  frame.rs  functions.rs  lib.rs  parser.rs  symbol.rs  tokenizer.rs  tokenizer_new.rs
jsonata/src/ast/: mod.rs  process.rs
jsonata/src/json/: LICENSE-APACHE  codegen.rs  mod.rs  number.rs  parser.rs
jsonata/src/value/: arena.rs  codegen.rs  kind.rs  mod.rs  pool.rs  serialize.rs
jsonata/tests/: testsuite.rs
jsonata/tests/testsuite/skip/object-constructor/: case023.json
src/: ast.rs  error.rs  errors.rs  evaluator.rs  frame.rs  functions.rs  json.rs  jsonata.rs  lib.rs  node_pool.rs  parser.rs  position.rs  process.rs  signature.rs  symbol.rs  token.rs  tokenizer.rs  value.rs
src/ast/: mod.rs  process.rs
src/evaluator/: evaluate.rs  evaluator.rs  frame.rs  functions.rs  mod.rs  new_frame.rs  new_value.rs  value.rs
src/evaluator/new_value/: impls.rs  iterator.rs  kind.rs  range.rs
src/evaluator/value/: iterator.rs
src/evaluator_old/: evaluator.rs  mod.rs  value.rs
src/json/: README.md  codegen.rs  mod.rs  number.rs  object.rs  parser.rs
src/json/util/: diyfp.rs  grisu2.rs  mod.rs  print_dec.rs
src/parser/: ast.rs  mod.rs  parser.rs  postprocess.rs  process.rs  symbol.rs  tokenizer.rs
src/value/: impls.rs  kind.rs  mod.rs  pool.rs  range.rs  serialize.rs
tests/: testsuite.rs
tests/testsuite/groups/errors/: case017.json
tests/testsuite/groups/function-string/: case002.json  case007.json
tests/testsuite/groups/skip_flattening/: case034.json
tests_old/: testsuite.rs
