[package]
name = "jsonata-rs"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Johan Venter <johan.venter@gmail.com>", "stedi developers"]
description = "An (incomplete) implementation of JSONata in Rust"
homepage = "https://github.com/Stedi/jsonata-rs/"
repository = "https://github.com/Stedi/jsonata-rs/"
keywords = ["jsonata", "json"]
categories = ["command-line-utilities", "compilers", "parser-implementations"]

[dependencies]
chrono = "0.4"
clap = { version = "4.4.7", features = ["derive"] }
bitflags = "2.4.1"
bumpalo = { version = "3.9.1", features = ["collections", "boxed"] }
hashbrown = { version = "0.14.2" }
dtoa = "1"

[dev-dependencies]
test-case = "1.2.0"
test-generator = "0.3"
