[package]
name = "jsonata"
version = "0.1.0"
authors = ["Johan Venter <johan.venter@gmail.com>"]
edition = "2021"

[dependencies]
jsonata-errors = { path = "../jsonata-errors" }
jsonata-shared = { path = "../jsonata-shared" }
jsonata-signatures = { path = "../jsonata-signatures" }
jsonata-signature-macro = { path = "../jsonata-signature-macro" }

chrono = "0.4"
structopt = "0.3"
bitflags = "1.3.2"

[dev-dependencies]
test-case = "1.2.0"
test-generator = "0.3"
