[package]
name = "jsonata"
version = "0.1.0"
authors = ["Johan Venter <johan.venter@gmail.com>"]
edition = "2021"

[dependencies]
jsonata-errors = { path = "../jsonata-errors" }

chrono = "0.4"
structopt = "0.3"
bitflags = "1.3.2"
bumpalo = { version = "3.9.1", features = ["collections", "boxed"] }
hashbrown = { version = "0.12.0", features = ["bumpalo"] }

[dev-dependencies]
test-case = "1.2.0"
test-generator = "0.3"
